--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ehough/pagodabox-bundle",
+    "name": "ehough/EhoughPagodaBoxBundle",
     "description": "A Symfony2 bundle that makes it easy to configure and deploy your app on Pagoda Box.",
     "homepage": "https://github.com/ehough/pagodabox-bundle",
     "license": "MPL-2.0",
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "symfony/framework-bundle" : "~2.3.0"
+        "symfony/framework-bundle" : "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
